--- a/Problems/Problems.vcxproj
+++ b/Problems/Problems.vcxproj
@@ -64,6 +64,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Solutions.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Solutions.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
