--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -69,7 +69,11 @@
   <ItemGroup>
     <ClInclude Include="0.h" />
     <ClInclude Include="1.h" />
+    <ClInclude Include="2.h" />
     <ClInclude Include="common.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="1.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
