--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -29,5 +29,13 @@
     <ClInclude Include="1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="1.md">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
