--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -70,10 +70,12 @@
     <ClInclude Include="0.h" />
     <ClInclude Include="1.h" />
     <ClInclude Include="2.h" />
+    <ClInclude Include="3.h" />
     <ClInclude Include="common.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md" />
+    <None Include="2.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
