--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -32,9 +32,15 @@
     <ClInclude Include="2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="2.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
