--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -35,12 +35,18 @@
     <ClInclude Include="3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="4.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="2.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="3.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
