--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -73,6 +73,7 @@
     <ClInclude Include="3.h" />
     <ClInclude Include="4.h" />
     <ClInclude Include="6.h" />
+    <ClInclude Include="7.h" />
     <ClInclude Include="common.h" />
   </ItemGroup>
   <ItemGroup>
@@ -81,6 +82,7 @@
     <None Include="3.md" />
     <None Include="4.md" />
     <None Include="6.md" />
+    <None Include="7.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
