--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClInclude Include="6.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="7.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -56,6 +59,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="4.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="7.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
