--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -74,6 +74,7 @@
     <ClInclude Include="4.h" />
     <ClInclude Include="6.h" />
     <ClInclude Include="7.h" />
+    <ClInclude Include="8.h" />
     <ClInclude Include="common.h" />
   </ItemGroup>
   <ItemGroup>
@@ -83,6 +84,7 @@
     <None Include="4.md" />
     <None Include="6.md" />
     <None Include="7.md" />
+    <None Include="8.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
