9. Palindrome Number AC

--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="8.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="9.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -68,6 +71,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="8.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="9.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
