--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -75,6 +75,7 @@
     <ClInclude Include="6.h" />
     <ClInclude Include="7.h" />
     <ClInclude Include="8.h" />
+    <ClInclude Include="9.h" />
     <ClInclude Include="common.h" />
   </ItemGroup>
   <ItemGroup>
@@ -85,6 +86,7 @@
     <None Include="6.md" />
     <None Include="7.md" />
     <None Include="8.md" />
+    <None Include="9.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
