--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <ClInclude Include="0.h" />
     <ClInclude Include="1.h" />
+    <ClInclude Include="10.h" />
     <ClInclude Include="2.h" />
     <ClInclude Include="3.h" />
     <ClInclude Include="4.h" />
@@ -80,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md" />
+    <None Include="10.md" />
     <None Include="2.md" />
     <None Include="3.md" />
     <None Include="4.md" />
