--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="9.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="10.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -74,6 +77,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="9.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="10.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
