--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -70,8 +70,10 @@
     <ClInclude Include="0.h" />
     <ClInclude Include="1.h" />
     <ClInclude Include="10.h" />
+    <ClInclude Include="11.h" />
     <ClInclude Include="2.h" />
     <ClInclude Include="3.h" />
+    <ClInclude Include="32.h" />
     <ClInclude Include="4.h" />
     <ClInclude Include="6.h" />
     <ClInclude Include="7.h" />
@@ -82,8 +84,10 @@
   <ItemGroup>
     <None Include="1.md" />
     <None Include="10.md" />
+    <None Include="11.md" />
     <None Include="2.md" />
     <None Include="3.md" />
+    <None Include="32.md" />
     <None Include="4.md" />
     <None Include="6.md" />
     <None Include="7.md" />
