--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -75,6 +75,8 @@
     <ClInclude Include="3.h" />
     <ClInclude Include="32.h" />
     <ClInclude Include="4.h" />
+    <ClInclude Include="44.h" />
+    <ClInclude Include="53.h" />
     <ClInclude Include="6.h" />
     <ClInclude Include="7.h" />
     <ClInclude Include="8.h" />
@@ -89,6 +91,8 @@
     <None Include="3.md" />
     <None Include="32.md" />
     <None Include="4.md" />
+    <None Include="44.md" />
+    <None Include="53.md" />
     <None Include="6.md" />
     <None Include="7.md" />
     <None Include="8.md" />
