--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -59,6 +59,12 @@
     <ClInclude Include="32.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="44.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="53.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -92,6 +98,12 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="32.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="44.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="53.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
