--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -76,6 +76,8 @@
     <ClInclude Include="32.h" />
     <ClInclude Include="4.h" />
     <ClInclude Include="44.h" />
+    <ClInclude Include="53.h" />
+    <ClInclude Include="62.h" />
     <ClInclude Include="64.h" />
     <ClInclude Include="6.h" />
     <ClInclude Include="7.h" />
@@ -92,6 +94,8 @@
     <None Include="32.md" />
     <None Include="4.md" />
     <None Include="44.md" />
+    <None Include="53.md" />
+    <None Include="62.md" />
     <None Include="64.md" />
     <None Include="6.md" />
     <None Include="7.md" />
