--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -78,6 +78,7 @@
     <ClInclude Include="44.h" />
     <ClInclude Include="53.h" />
     <ClInclude Include="62.h" />
+    <ClInclude Include="63.h" />
     <ClInclude Include="64.h" />
     <ClInclude Include="6.h" />
     <ClInclude Include="7.h" />
@@ -96,6 +97,7 @@
     <None Include="44.md" />
     <None Include="53.md" />
     <None Include="62.md" />
+    <None Include="63.md" />
     <None Include="64.md" />
     <None Include="6.md" />
     <None Include="7.md" />
