--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClInclude Include="63.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="96.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -122,6 +125,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="63.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="96.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
