--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -82,6 +82,7 @@
     <ClInclude Include="64.h" />
     <ClInclude Include="6.h" />
     <ClInclude Include="7.h" />
+    <ClInclude Include="70.h" />
     <ClInclude Include="8.h" />
     <ClInclude Include="9.h" />
     <ClInclude Include="96.h" />
@@ -102,6 +103,7 @@
     <None Include="64.md" />
     <None Include="6.md" />
     <None Include="7.md" />
+    <None Include="70.md" />
     <None Include="8.md" />
     <None Include="9.md" />
     <None Include="96.md" />
