--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="96.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="70.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -128,6 +131,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="96.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="70.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
