--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="7.h" />
     <ClInclude Include="70.h" />
     <ClInclude Include="8.h" />
+    <ClInclude Include="85.h" />
     <ClInclude Include="9.h" />
     <ClInclude Include="96.h" />
     <ClInclude Include="common.h" />
@@ -105,6 +106,7 @@
     <None Include="7.md" />
     <None Include="70.md" />
     <None Include="8.md" />
+    <None Include="85.md" />
     <None Include="9.md" />
     <None Include="96.md" />
   </ItemGroup>
