--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClInclude Include="70.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="85.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -134,6 +137,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="70.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="85.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
