--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="6.h" />
     <ClInclude Include="7.h" />
     <ClInclude Include="70.h" />
+    <ClInclude Include="72.h" />
     <ClInclude Include="8.h" />
     <ClInclude Include="85.h" />
     <ClInclude Include="87.h" />
@@ -107,6 +108,7 @@
     <None Include="6.md" />
     <None Include="7.md" />
     <None Include="70.md" />
+    <None Include="72.md" />
     <None Include="8.md" />
     <None Include="85.md" />
     <None Include="87.md" />
