--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -89,6 +89,9 @@
     <ClInclude Include="91.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="72.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -152,6 +155,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="91.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="72.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
