--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -71,6 +71,7 @@
     <ClInclude Include="1.h" />
     <ClInclude Include="10.h" />
     <ClInclude Include="11.h" />
+    <ClInclude Include="115.h" />
     <ClInclude Include="2.h" />
     <ClInclude Include="3.h" />
     <ClInclude Include="32.h" />
@@ -97,6 +98,7 @@
     <None Include="1.md" />
     <None Include="10.md" />
     <None Include="11.md" />
+    <None Include="115.md" />
     <None Include="2.md" />
     <None Include="3.md" />
     <None Include="32.md" />
