--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -95,6 +95,9 @@
     <ClInclude Include="97.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="115.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -164,6 +167,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="97.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="115.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
