--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -72,6 +72,7 @@
     <ClInclude Include="10.h" />
     <ClInclude Include="11.h" />
     <ClInclude Include="115.h" />
+    <ClInclude Include="120.h" />
     <ClInclude Include="2.h" />
     <ClInclude Include="3.h" />
     <ClInclude Include="32.h" />
@@ -99,6 +100,7 @@
     <None Include="10.md" />
     <None Include="11.md" />
     <None Include="115.md" />
+    <None Include="120.md" />
     <None Include="2.md" />
     <None Include="3.md" />
     <None Include="32.md" />
