--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -98,6 +98,9 @@
     <ClInclude Include="115.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="120.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -170,6 +173,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="115.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="120.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
