--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -101,6 +101,9 @@
     <ClInclude Include="120.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="95.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -176,6 +179,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="120.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="95.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
