--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -73,6 +73,7 @@
     <ClInclude Include="11.h" />
     <ClInclude Include="115.h" />
     <ClInclude Include="120.h" />
+    <ClInclude Include="121.h" />
     <ClInclude Include="2.h" />
     <ClInclude Include="3.h" />
     <ClInclude Include="32.h" />
@@ -102,6 +103,7 @@
     <None Include="11.md" />
     <None Include="115.md" />
     <None Include="120.md" />
+    <None Include="121.md" />
     <None Include="2.md" />
     <None Include="3.md" />
     <None Include="32.md" />
