--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -104,6 +104,9 @@
     <ClInclude Include="95.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="121.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -182,6 +185,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="95.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="121.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
