--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -74,6 +74,8 @@
     <ClInclude Include="115.h" />
     <ClInclude Include="120.h" />
     <ClInclude Include="121.h" />
+    <ClInclude Include="123.h" />
+    <ClInclude Include="152.h" />
     <ClInclude Include="2.h" />
     <ClInclude Include="3.h" />
     <ClInclude Include="32.h" />
@@ -104,6 +106,7 @@
     <None Include="115.md" />
     <None Include="120.md" />
     <None Include="121.md" />
+    <None Include="123.md" />
     <None Include="2.md" />
     <None Include="3.md" />
     <None Include="32.md" />
