--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -107,6 +107,12 @@
     <ClInclude Include="121.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="123.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="152.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -188,6 +194,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="121.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="123.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
