152. Maximum Product Subarray AC

--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -107,6 +107,7 @@
     <None Include="120.md" />
     <None Include="121.md" />
     <None Include="123.md" />
+    <None Include="152.md" />
     <None Include="2.md" />
     <None Include="3.md" />
     <None Include="32.md" />
