--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -199,5 +199,8 @@
     <None Include="123.md">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="152.md">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
