--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -77,6 +77,7 @@
     <ClInclude Include="123.h" />
     <ClInclude Include="152.h" />
     <ClInclude Include="174.h" />
+    <ClInclude Include="198.h" />
     <ClInclude Include="2.h" />
     <ClInclude Include="3.h" />
     <ClInclude Include="32.h" />
@@ -110,6 +111,7 @@
     <None Include="123.md" />
     <None Include="152.md" />
     <None Include="174.md" />
+    <None Include="198.md" />
     <None Include="2.md" />
     <None Include="3.md" />
     <None Include="32.md" />
