--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -116,6 +116,9 @@
     <ClInclude Include="174.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="198.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -206,6 +209,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="174.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="198.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
