--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -119,6 +119,12 @@
     <ClInclude Include="198.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="213.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="221.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -212,6 +218,12 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="198.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="213.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="221.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
