--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -128,6 +128,12 @@
     <ClInclude Include="264.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="188.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="15.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -230,6 +236,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="264.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="15.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
