188. Best Time to Buy and Sell Stock IV AC

--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -117,6 +117,7 @@
     <None Include="15.md" />
     <None Include="152.md" />
     <None Include="174.md" />
+    <None Include="188.md" />
     <None Include="198.md" />
     <None Include="2.md" />
     <None Include="213.md" />
