--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -137,6 +137,9 @@
     <ClInclude Include="12.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="13.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -248,6 +251,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="12.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="13.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
