--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -85,6 +85,7 @@
     <ClInclude Include="2.h" />
     <ClInclude Include="213.h" />
     <ClInclude Include="221.h" />
+    <ClInclude Include="228.h" />
     <ClInclude Include="264.h" />
     <ClInclude Include="3.h" />
     <ClInclude Include="32.h" />
@@ -126,6 +127,7 @@
     <None Include="2.md" />
     <None Include="213.md" />
     <None Include="221.md" />
+    <None Include="228.md" />
     <None Include="264.md" />
     <None Include="3.md" />
     <None Include="32.md" />
