229. Majority Element II AC

--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="213.h" />
     <ClInclude Include="221.h" />
     <ClInclude Include="228.h" />
+    <ClInclude Include="229.h" />
     <ClInclude Include="264.h" />
     <ClInclude Include="3.h" />
     <ClInclude Include="32.h" />
@@ -128,6 +129,7 @@
     <None Include="213.md" />
     <None Include="221.md" />
     <None Include="228.md" />
+    <None Include="229.md" />
     <None Include="264.md" />
     <None Include="3.md" />
     <None Include="32.md" />
