--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -143,6 +143,9 @@
     <ClInclude Include="228.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="229.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -260,6 +263,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="228.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="229.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
