--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -146,6 +146,9 @@
     <ClInclude Include="229.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="5.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -266,6 +269,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="229.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="5.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
