--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -149,6 +149,9 @@
     <ClInclude Include="5.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="16.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -272,6 +275,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="5.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="16.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
