17. Letter Combinations of a Phone Number AC

--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -80,6 +80,7 @@
     <ClInclude Include="15.h" />
     <ClInclude Include="152.h" />
     <ClInclude Include="16.h" />
+    <ClInclude Include="17.h" />
     <ClInclude Include="174.h" />
     <ClInclude Include="188.h" />
     <ClInclude Include="198.h" />
@@ -125,6 +126,7 @@
     <None Include="15.md" />
     <None Include="152.md" />
     <None Include="16.md" />
+    <None Include="17.md" />
     <None Include="174.md" />
     <None Include="188.md" />
     <None Include="198.md" />
