--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -155,6 +155,9 @@
     <ClInclude Include="17.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="18.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -284,6 +287,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="17.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="18.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
