--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="174.h" />
     <ClInclude Include="18.h" />
     <ClInclude Include="188.h" />
+    <ClInclude Include="19.h" />
     <ClInclude Include="198.h" />
     <ClInclude Include="2.h" />
     <ClInclude Include="213.h" />
@@ -131,6 +132,7 @@
     <None Include="174.md" />
     <None Include="18.md" />
     <None Include="188.md" />
+    <None Include="19.md" />
     <None Include="198.md" />
     <None Include="2.md" />
     <None Include="213.md" />
