--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -161,6 +161,9 @@
     <ClInclude Include="19.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="274.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -296,6 +299,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="19.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="274.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
