275. H-Index II AC

--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -93,6 +93,7 @@
     <ClInclude Include="229.h" />
     <ClInclude Include="264.h" />
     <ClInclude Include="274.h" />
+    <ClInclude Include="275.h" />
     <ClInclude Include="3.h" />
     <ClInclude Include="32.h" />
     <ClInclude Include="4.h" />
@@ -142,6 +143,7 @@
     <None Include="229.md" />
     <None Include="264.md" />
     <None Include="274.md" />
+    <None Include="275.md" />
     <None Include="3.md" />
     <None Include="32.md" />
     <None Include="4.md" />
