273. Integer to English Words AC

--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -92,6 +92,7 @@
     <ClInclude Include="228.h" />
     <ClInclude Include="229.h" />
     <ClInclude Include="264.h" />
+    <ClInclude Include="273.h" />
     <ClInclude Include="274.h" />
     <ClInclude Include="275.h" />
     <ClInclude Include="3.h" />
@@ -142,6 +143,7 @@
     <None Include="228.md" />
     <None Include="229.md" />
     <None Include="264.md" />
+    <None Include="273.md" />
     <None Include="274.md" />
     <None Include="275.md" />
     <None Include="3.md" />
