--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -167,6 +167,9 @@
     <ClInclude Include="275.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="273.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -308,6 +311,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="275.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="273.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
