--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -170,6 +170,9 @@
     <ClInclude Include="273.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="268.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -314,6 +317,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="273.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="268.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
