--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -91,6 +91,7 @@
     <ClInclude Include="221.h" />
     <ClInclude Include="228.h" />
     <ClInclude Include="229.h" />
+    <ClInclude Include="263.h" />
     <ClInclude Include="264.h" />
     <ClInclude Include="268.h" />
     <ClInclude Include="273.h" />
@@ -143,6 +144,7 @@
     <None Include="221.md" />
     <None Include="228.md" />
     <None Include="229.md" />
+    <None Include="263.md" />
     <None Include="264.md" />
     <None Include="268.md" />
     <None Include="273.md" />
