260. Single Number III AC

--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -176,6 +176,9 @@
     <ClInclude Include="263.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="260.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -326,6 +329,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="263.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="260.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
