--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -182,6 +182,9 @@
     <ClInclude Include="258.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="257.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -338,6 +341,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="258.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="257.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
