--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -185,6 +185,9 @@
     <ClInclude Include="257.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="242.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -344,6 +347,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="257.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="242.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
