--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -188,6 +188,9 @@
     <ClInclude Include="242.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="241.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -350,6 +353,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="242.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="241.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
