282. Expression Add Operators AC

--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -191,6 +191,9 @@
     <ClInclude Include="241.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="282.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -356,6 +359,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="241.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="282.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
