--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="273.h" />
     <ClInclude Include="274.h" />
     <ClInclude Include="275.h" />
+    <ClInclude Include="282.h" />
     <ClInclude Include="3.h" />
     <ClInclude Include="32.h" />
     <ClInclude Include="4.h" />
@@ -160,6 +161,7 @@
     <None Include="273.md" />
     <None Include="274.md" />
     <None Include="275.md" />
+    <None Include="282.md" />
     <None Include="3.md" />
     <None Include="32.md" />
     <None Include="4.md" />
