--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -91,6 +91,7 @@
     <ClInclude Include="221.h" />
     <ClInclude Include="228.h" />
     <ClInclude Include="229.h" />
+    <ClInclude Include="240.h" />
     <ClInclude Include="241.h" />
     <ClInclude Include="242.h" />
     <ClInclude Include="257.h" />
@@ -150,6 +151,7 @@
     <None Include="221.md" />
     <None Include="228.md" />
     <None Include="229.md" />
+    <None Include="240.md" />
     <None Include="241.md" />
     <None Include="242.md" />
     <None Include="257.md" />
