--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -197,6 +197,12 @@
     <ClInclude Include="240.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="239.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="238.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -368,6 +374,12 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="240.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="239.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="238.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
