--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -91,6 +91,7 @@
     <ClInclude Include="221.h" />
     <ClInclude Include="228.h" />
     <ClInclude Include="229.h" />
+    <ClInclude Include="237.h" />
     <ClInclude Include="238.h" />
     <ClInclude Include="239.h" />
     <ClInclude Include="240.h" />
@@ -153,6 +154,7 @@
     <None Include="221.md" />
     <None Include="228.md" />
     <None Include="229.md" />
+    <None Include="237.md" />
     <None Include="238.md" />
     <None Include="239.md" />
     <None Include="240.md" />
