--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -203,6 +203,9 @@
     <ClInclude Include="238.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="237.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -380,6 +383,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="238.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="237.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
