--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -206,6 +206,12 @@
     <ClInclude Include="237.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="236.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="235.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -386,6 +392,12 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="237.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="236.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="235.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
