--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -91,6 +91,7 @@
     <ClInclude Include="221.h" />
     <ClInclude Include="228.h" />
     <ClInclude Include="229.h" />
+    <ClInclude Include="234.h" />
     <ClInclude Include="235.h" />
     <ClInclude Include="236.h" />
     <ClInclude Include="237.h" />
@@ -156,6 +157,7 @@
     <None Include="221.md" />
     <None Include="228.md" />
     <None Include="229.md" />
+    <None Include="234.md" />
     <None Include="235.md" />
     <None Include="236.md" />
     <None Include="237.md" />
