--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -215,6 +215,9 @@
     <ClInclude Include="234.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="233.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -404,6 +407,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="234.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="233.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
