--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -218,6 +218,9 @@
     <ClInclude Include="233.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="231.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -410,6 +413,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="233.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="231.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
