226. Invert Binary Tree AC

--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -89,6 +89,7 @@
     <ClInclude Include="2.h" />
     <ClInclude Include="213.h" />
     <ClInclude Include="221.h" />
+    <ClInclude Include="226.h" />
     <ClInclude Include="227.h" />
     <ClInclude Include="228.h" />
     <ClInclude Include="229.h" />
@@ -159,6 +160,7 @@
     <None Include="2.md" />
     <None Include="213.md" />
     <None Include="221.md" />
+    <None Include="226.md" />
     <None Include="227.md" />
     <None Include="228.md" />
     <None Include="229.md" />
