224. Basic Calculator AC

--- a/Solutions/Solutions.vcxproj
+++ b/Solutions/Solutions.vcxproj
@@ -89,6 +89,7 @@
     <ClInclude Include="2.h" />
     <ClInclude Include="213.h" />
     <ClInclude Include="221.h" />
+    <ClInclude Include="224.h" />
     <ClInclude Include="226.h" />
     <ClInclude Include="227.h" />
     <ClInclude Include="228.h" />
@@ -160,6 +161,7 @@
     <None Include="2.md" />
     <None Include="213.md" />
     <None Include="221.md" />
+    <None Include="224.md" />
     <None Include="226.md" />
     <None Include="227.md" />
     <None Include="228.md" />
