--- a/Solutions/Solutions.vcxproj.filters
+++ b/Solutions/Solutions.vcxproj.filters
@@ -230,6 +230,9 @@
     <ClInclude Include="226.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="224.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="1.md">
@@ -434,6 +437,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="226.md">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="224.md">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
